Added TourPayment. Updated AppUpdater to load settings at startup. Implemented INotifyPropertyChange.

--- a/Resources/Texts.de-DE.resx
+++ b/Resources/Texts.de-DE.resx
@@ -120,8 +120,14 @@
   <data name="add" xml:space="preserve">
     <value>&amp;Add</value>
   </data>
+  <data name="app_copyright" xml:space="preserve">
+    <value>Copyright © 2011 SarvSoft</value>
+  </data>
   <data name="app_name" xml:space="preserve">
     <value>Settlement</value>
+  </data>
+  <data name="app_welcome" xml:space="preserve">
+    <value>Welcome </value>
   </data>
   <data name="cancel" xml:space="preserve">
     <value>&amp;Cancel</value>
@@ -141,6 +147,9 @@
   <data name="edit" xml:space="preserve">
     <value>&amp;Edit</value>
   </data>
+  <data name="edit_role" xml:space="preserve">
+    <value>Edit role</value>
+  </data>
   <data name="edit_user" xml:space="preserve">
     <value>Edit user</value>
   </data>
@@ -150,131 +159,32 @@
   <data name="exit" xml:space="preserve">
     <value>E&amp;xit</value>
   </data>
-  <data name="language" xml:space="preserve">
-    <value>Language</value>
+  <data name="frm_title_base_price_editor" xml:space="preserve">
+    <value>Price details</value>
   </data>
-  <data name="login" xml:space="preserve">
-    <value>&amp;Login</value>
+  <data name="frm_title_member_editor" xml:space="preserve">
+    <value>Member details</value>
   </data>
-  <data name="logon" xml:space="preserve">
-    <value>Logon to system</value>
+  <data name="frm_title_rule_editor" xml:space="preserve">
+    <value>Rule details</value>
   </data>
-  <data name="logon_process" xml:space="preserve">
-    <value>Please select your name from users list and enter your password to log in.</value>
+  <data name="frm_title_tour_Cost_group_editor" xml:space="preserve">
+    <value>Group details</value>
   </data>
-  <data name="mnu_caption_app_settings" xml:space="preserve">
-    <value>&amp;Application settings</value>
+  <data name="frm_title_tour_editor" xml:space="preserve">
+    <value>Tour details</value>
   </data>
-  <data name="mnu_caption_exit" xml:space="preserve">
-    <value>E&amp;xit</value>
+  <data name="gpx_contacts" xml:space="preserve">
+    <value>Contacts</value>
   </data>
-  <data name="mnu_caption_help" xml:space="preserve">
-    <value>&amp;Help</value>
-  </data>
-  <data name="mnu_caption_help_about" xml:space="preserve">
-    <value>&amp;About</value>
-  </data>
-  <data name="mnu_caption_help_content" xml:space="preserve">
-    <value>&amp;Content</value>
-  </data>
-  <data name="mnu_caption_presence" xml:space="preserve">
-    <value>&amp;Presence</value>
-  </data>
-  <data name="mnu_caption_settlement" xml:space="preserve">
-    <value>&amp;Settlement</value>
-  </data>
-  <data name="mnu_caption_staff" xml:space="preserve">
-    <value>&amp;Employees</value>
-  </data>
-  <data name="mnu_caption_tools" xml:space="preserve">
-    <value>&amp;Tools</value>
-  </data>
-  <data name="mnu_caption_tours" xml:space="preserve">
-    <value>&amp;Tours</value>
-  </data>
-  <data name="mnu_caption_user_settings" xml:space="preserve">
-    <value>&amp;User settings</value>
-  </data>
-  <data name="mnu_tip_app_settings" xml:space="preserve">
-    <value />
-  </data>
-  <data name="mnu_tip_exit" xml:space="preserve">
-    <value>Exit application</value>
-  </data>
-  <data name="mnu_tip_help" xml:space="preserve">
-    <value />
-  </data>
-  <data name="mnu_tip_help_about" xml:space="preserve">
-    <value>Information about this application</value>
-  </data>
-  <data name="mnu_tip_help_content" xml:space="preserve">
-    <value>How to use application</value>
-  </data>
-  <data name="mnu_tip_presence" xml:space="preserve">
-    <value>Employees worktime report</value>
-  </data>
-  <data name="mnu_tip_settlement" xml:space="preserve">
-    <value />
-  </data>
-  <data name="mnu_tip_staff" xml:space="preserve">
-    <value />
-  </data>
-  <data name="mnu_tip_tools" xml:space="preserve">
-    <value />
-  </data>
-  <data name="mnu_tip_tours" xml:space="preserve">
-    <value>View and edit today tours</value>
-  </data>
-  <data name="mnu_tip_user_settings" xml:space="preserve">
-    <value />
-  </data>
-  <data name="name" xml:space="preserve">
-    <value>Name</value>
-  </data>
-  <data name="password" xml:space="preserve">
-    <value>&amp;Password</value>
-  </data>
-  <data name="role_name" xml:space="preserve">
-    <value>Role</value>
-  </data>
-  <data name="save" xml:space="preserve">
-    <value>&amp;Save</value>
-  </data>
-  <data name="select_user" xml:space="preserve">
-    <value>Move mouse pointer over a user to see it's details or select a user to edit.</value>
-  </data>
-  <data name="username" xml:space="preserve">
-    <value>&amp;UserName</value>
-  </data>
-  <data name="users" xml:space="preserve">
-    <value>Users</value>
-  </data>
-  <data name="user_is_disabled" xml:space="preserve">
-    <value>User is disabled</value>
-  </data>
-  <data name="user_is_enabled" xml:space="preserve">
-    <value>User is enabled</value>
-  </data>
-  <data name="roles" xml:space="preserve">
-    <value>Roles</value>
-  </data>
-  <data name="tasks" xml:space="preserve">
-    <value>Tasks</value>
-  </data>
-  <data name="edit_role" xml:space="preserve">
-    <value>Edit role</value>
-  </data>
-  <data name="select_role" xml:space="preserve">
-    <value>Move mouse pointer over a role name to see or edit it's tasks or select a role to edit it's name.</value>
-  </data>
-  <data name="app_welcome" xml:space="preserve">
-    <value>Welcome </value>
-  </data>
-  <data name="grid_title_participants" xml:space="preserve">
-    <value>Participants</value>
+  <data name="gpx_updates" xml:space="preserve">
+    <value>Updates</value>
   </data>
   <data name="grid_title_Cost_type" xml:space="preserve">
     <value>Cost type</value>
+  </data>
+  <data name="grid_title_participants" xml:space="preserve">
+    <value>Participants</value>
   </data>
   <data name="grid_title_price_per_person" xml:space="preserve">
     <value>Price per person</value>
@@ -291,146 +201,20 @@
   <data name="grid_title_tour_type" xml:space="preserve">
     <value>Tour type</value>
   </data>
-  <data name="frm_title_tour_editor" xml:space="preserve">
-    <value>Tour details</value>
+  <data name="language" xml:space="preserve">
+    <value>Language</value>
+  </data>
+  <data name="lbl_app_loading" xml:space="preserve">
+    <value>Please wait. Loading...</value>
   </data>
   <data name="lbl_comments" xml:space="preserve">
     <value>Comments</value>
   </data>
-  <data name="lbl_date" xml:space="preserve">
-    <value>Date</value>
-  </data>
-  <data name="lbl_employees" xml:space="preserve">
-    <value>Employees</value>
-  </data>
-  <data name="lbl_participant_count" xml:space="preserve">
-    <value>Participants count</value>
-  </data>
-  <data name="lbl_signup_count" xml:space="preserve">
-    <value>Sign up count</value>
-  </data>
-  <data name="lbl_signup_type" xml:space="preserve">
-    <value>Sign up type</value>
-  </data>
-  <data name="lbl_time" xml:space="preserve">
-    <value>time</value>
-  </data>
-  <data name="lbl_tour_status" xml:space="preserve">
-    <value>Status</value>
-  </data>
-  <data name="lbl_tour_type" xml:space="preserve">
-    <value>Type</value>
-  </data>
-  <data name="tab_title_members" xml:space="preserve">
-    <value>Guest</value>
-  </data>
-  <data name="tab_title_Payments" xml:space="preserve">
-    <value>Payment</value>
-  </data>
-  <data name="tab_title_staff" xml:space="preserve">
-    <value>Staff</value>
-  </data>
-  <data name="tab_title_tour" xml:space="preserve">
-    <value>Tour</value>
-  </data>
-  <data name="frm_title_member_editor" xml:space="preserve">
-    <value>Member details</value>
-  </data>
-  <data name="lbl_first_name" xml:space="preserve">
-    <value>First name</value>
-  </data>
-  <data name="lbl_last_name" xml:space="preserve">
-    <value>Last name</value>
-  </data>
-  <data name="lbl_title" xml:space="preserve">
-    <value>Title</value>
-  </data>
-  <data name="lbl_guests" xml:space="preserve">
-    <value>Guests</value>
-  </data>
-  <data name="lbl_guest_contacts" xml:space="preserve">
-    <value>Guest contacts</value>
-  </data>
-  <data name="frm_title_base_price_editor" xml:space="preserve">
-    <value>Price details</value>
-  </data>
-  <data name="lbl_price" xml:space="preserve">
-    <value>&amp;Price</value>
-  </data>
-  <data name="frm_title_rule_editor" xml:space="preserve">
-    <value>Rule details</value>
-  </data>
-  <data name="lbl_formula" xml:space="preserve">
-    <value>Formula</value>
-  </data>
-  <data name="lbl_rule_name" xml:space="preserve">
-    <value>Rule name</value>
-  </data>
-  <data name="frm_title_tour_Cost_group_editor" xml:space="preserve">
-    <value>Group details</value>
-  </data>
-  <data name="lbl_tour_group_name" xml:space="preserve">
-    <value>Group name</value>
-  </data>
-  <data name="gpx_contacts" xml:space="preserve">
-    <value>Contacts</value>
-  </data>
-  <data name="app_copyright" xml:space="preserve">
-    <value>Copyright © 2011 SarvSoft</value>
-  </data>
-  <data name="gpx_updates" xml:space="preserve">
-    <value>Updates</value>
-  </data>
   <data name="lbl_current_version" xml:space="preserve">
     <value>Version</value>
   </data>
-  <data name="lbl_last_update_check" xml:space="preserve">
-    <value>Last checked</value>
-  </data>
-  <data name="lbl_produced_by" xml:space="preserve">
-    <value>Produced by</value>
-  </data>
-  <data name="lbl_registered_to" xml:space="preserve">
-    <value>Registered to</value>
-  </data>
-  <data name="lbl_updater_state" xml:space="preserve">
-    <value>Updater is</value>
-  </data>
-  <data name="lbl_update_state" xml:space="preserve">
-    <value>New version</value>
-  </data>
-  <data name="update_check_now" xml:space="preserve">
-    <value>Check now</value>
-  </data>
-  <data name="update_download_now" xml:space="preserve">
-    <value>Download</value>
-  </data>
-  <data name="update_install_now" xml:space="preserve">
-    <value>Install</value>
-  </data>
-  <data name="update_install_service" xml:space="preserve">
-    <value>Install</value>
-  </data>
-  <data name="update_remove_service" xml:space="preserve">
-    <value>Remove</value>
-  </data>
-  <data name="new_version_exists" xml:space="preserve">
-    <value>New version is available to download</value>
-  </data>
-  <data name="program_is_up_to_date" xml:space="preserve">
-    <value>Program is up to date</value>
-  </data>
-  <data name="updater_is_installed" xml:space="preserve">
-    <value>Updater service is installed</value>
-  </data>
-  <data name="updater_is_not_installed" xml:space="preserve">
-    <value>Updater service is not installed</value>
-  </data>
-  <data name="new_version_is_ready_to_install" xml:space="preserve">
-    <value>New version is ready to install</value>
-  </data>
-  <data name="lbl_app_loading" xml:space="preserve">
-    <value>Please wait. Loading...</value>
+  <data name="lbl_date" xml:space="preserve">
+    <value>Date</value>
   </data>
   <data name="lbl_db_name" xml:space="preserve">
     <value>Database</value>
@@ -447,6 +231,69 @@
   <data name="lbl_db_srv_user" xml:space="preserve">
     <value>Username</value>
   </data>
+  <data name="lbl_employees" xml:space="preserve">
+    <value>Employees</value>
+  </data>
+  <data name="lbl_first_name" xml:space="preserve">
+    <value>First name</value>
+  </data>
+  <data name="lbl_formula" xml:space="preserve">
+    <value>Formula</value>
+  </data>
+  <data name="lbl_guests" xml:space="preserve">
+    <value>Guests</value>
+  </data>
+  <data name="lbl_guest_contacts" xml:space="preserve">
+    <value>Guest contacts</value>
+  </data>
+  <data name="lbl_last_name" xml:space="preserve">
+    <value>Last name</value>
+  </data>
+  <data name="lbl_last_update_check" xml:space="preserve">
+    <value>Last checked</value>
+  </data>
+  <data name="lbl_participant_count" xml:space="preserve">
+    <value>Participants count</value>
+  </data>
+  <data name="lbl_price" xml:space="preserve">
+    <value>&amp;Price</value>
+  </data>
+  <data name="lbl_produced_by" xml:space="preserve">
+    <value>Produced by</value>
+  </data>
+  <data name="lbl_registered_to" xml:space="preserve">
+    <value>Registered to</value>
+  </data>
+  <data name="lbl_rule_name" xml:space="preserve">
+    <value>Rule name</value>
+  </data>
+  <data name="lbl_signup_count" xml:space="preserve">
+    <value>Sign up count</value>
+  </data>
+  <data name="lbl_signup_type" xml:space="preserve">
+    <value>Sign up type</value>
+  </data>
+  <data name="lbl_time" xml:space="preserve">
+    <value>time</value>
+  </data>
+  <data name="lbl_title" xml:space="preserve">
+    <value>Title</value>
+  </data>
+  <data name="lbl_tour_group_name" xml:space="preserve">
+    <value>Group name</value>
+  </data>
+  <data name="lbl_tour_status" xml:space="preserve">
+    <value>Status</value>
+  </data>
+  <data name="lbl_tour_type" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="lbl_updater_state" xml:space="preserve">
+    <value>Updater is</value>
+  </data>
+  <data name="lbl_update_state" xml:space="preserve">
+    <value>New version</value>
+  </data>
   <data name="lbl_upd_auto_check" xml:space="preserve">
     <value>Enable automatic update</value>
   </data>
@@ -461,5 +308,164 @@
   </data>
   <data name="lbl_upd_url" xml:space="preserve">
     <value>Update URL</value>
+  </data>
+  <data name="login" xml:space="preserve">
+    <value>&amp;Login</value>
+  </data>
+  <data name="logon" xml:space="preserve">
+    <value>Logon to system</value>
+  </data>
+  <data name="logon_process" xml:space="preserve">
+    <value>Please select your name from users list and enter your password to log in.</value>
+  </data>
+  <data name="mnu_caption_app_settings" xml:space="preserve">
+    <value>&amp;Application settings</value>
+  </data>
+  <data name="mnu_caption_daily_tours" xml:space="preserve">
+    <value>&amp;Daily tours</value>
+  </data>
+  <data name="mnu_caption_exit" xml:space="preserve">
+    <value>E&amp;xit</value>
+  </data>
+  <data name="mnu_caption_help" xml:space="preserve">
+    <value>&amp;Help</value>
+  </data>
+  <data name="mnu_caption_help_about" xml:space="preserve">
+    <value>&amp;About</value>
+  </data>
+  <data name="mnu_caption_help_content" xml:space="preserve">
+    <value>&amp;Content</value>
+  </data>
+  <data name="mnu_caption_presence" xml:space="preserve">
+    <value>&amp;Presence</value>
+  </data>
+  <data name="mnu_caption_staff" xml:space="preserve">
+    <value>&amp;Employees</value>
+  </data>
+  <data name="mnu_caption_tools" xml:space="preserve">
+    <value>&amp;Tools</value>
+  </data>
+  <data name="mnu_caption_tour" xml:space="preserve">
+    <value>&amp;Tour</value>
+  </data>
+  <data name="mnu_caption_user_settings" xml:space="preserve">
+    <value>&amp;User settings</value>
+  </data>
+  <data name="mnu_tip_app_settings" xml:space="preserve">
+    <value />
+  </data>
+  <data name="mnu_tip_daily_tours" xml:space="preserve">
+    <value>View and edit today tours</value>
+  </data>
+  <data name="mnu_tip_exit" xml:space="preserve">
+    <value>Exit application</value>
+  </data>
+  <data name="mnu_tip_help" xml:space="preserve">
+    <value />
+  </data>
+  <data name="mnu_tip_help_about" xml:space="preserve">
+    <value>Information about this application</value>
+  </data>
+  <data name="mnu_tip_help_content" xml:space="preserve">
+    <value>How to use application</value>
+  </data>
+  <data name="mnu_tip_presence" xml:space="preserve">
+    <value>Employees worktime report</value>
+  </data>
+  <data name="mnu_tip_staff" xml:space="preserve">
+    <value />
+  </data>
+  <data name="mnu_tip_tools" xml:space="preserve">
+    <value />
+  </data>
+  <data name="mnu_tip_tour" xml:space="preserve">
+    <value />
+  </data>
+  <data name="mnu_tip_user_settings" xml:space="preserve">
+    <value />
+  </data>
+  <data name="name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="new_version_exists" xml:space="preserve">
+    <value>New version is available to download</value>
+  </data>
+  <data name="new_version_is_ready_to_install" xml:space="preserve">
+    <value>New version is ready to install</value>
+  </data>
+  <data name="password" xml:space="preserve">
+    <value>&amp;Password</value>
+  </data>
+  <data name="program_is_up_to_date" xml:space="preserve">
+    <value>Program is up to date</value>
+  </data>
+  <data name="roles" xml:space="preserve">
+    <value>Roles</value>
+  </data>
+  <data name="role_name" xml:space="preserve">
+    <value>Role</value>
+  </data>
+  <data name="save" xml:space="preserve">
+    <value>&amp;Save</value>
+  </data>
+  <data name="select_role" xml:space="preserve">
+    <value>Move mouse pointer over a role name to see or edit it's tasks or select a role to edit it's name.</value>
+  </data>
+  <data name="select_user" xml:space="preserve">
+    <value>Move mouse pointer over a user to see it's details or select a user to edit.</value>
+  </data>
+  <data name="tab_title_members" xml:space="preserve">
+    <value>Guest</value>
+  </data>
+  <data name="tab_title_Payments" xml:space="preserve">
+    <value>Payments</value>
+  </data>
+  <data name="tab_title_staff" xml:space="preserve">
+    <value>Staff</value>
+  </data>
+  <data name="tab_title_tour" xml:space="preserve">
+    <value>Tour</value>
+  </data>
+  <data name="tasks" xml:space="preserve">
+    <value>Tasks</value>
+  </data>
+  <data name="updater_is_installed" xml:space="preserve">
+    <value>Updater service is installed</value>
+  </data>
+  <data name="updater_is_not_installed" xml:space="preserve">
+    <value>Updater service is not installed</value>
+  </data>
+  <data name="update_check_now" xml:space="preserve">
+    <value>Check now</value>
+  </data>
+  <data name="update_download_now" xml:space="preserve">
+    <value>Download</value>
+  </data>
+  <data name="update_install_now" xml:space="preserve">
+    <value>Install</value>
+  </data>
+  <data name="update_install_service" xml:space="preserve">
+    <value>Install</value>
+  </data>
+  <data name="update_remove_service" xml:space="preserve">
+    <value>Remove</value>
+  </data>
+  <data name="username" xml:space="preserve">
+    <value>&amp;UserName</value>
+  </data>
+  <data name="users" xml:space="preserve">
+    <value>Users</value>
+  </data>
+  <data name="user_is_disabled" xml:space="preserve">
+    <value>User is disabled</value>
+  </data>
+  <data name="user_is_enabled" xml:space="preserve">
+    <value>User is enabled</value>
+  </data>
+  <data name="lbl_payment_amount" xml:space="preserve">
+    <value>Amount</value>
+  </data>
+  <data name="lbl_payment_type" xml:space="preserve">
+    <value>PaymentType</value>
   </data>
 </root>
